# Navo

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
Backend/: .gitignore  db.sqlite3  manage.py  requirements.txt
Backend/navobrowserapp/: apps.py  serializers.py  urls.py  views.py
Backend/navobrowserapp/templates/search_app/: index.html
Backend/navobrowserproject/: asgi.py  settings.py  urls.py  wsgi.py
navo/: package.json
navo/src/: App.vue
navo/src-tauri/: Cargo.toml  tauri.conf.json
navo/src-tauri/src/: baidu.rs  bing.rs  css.rs  duckduckgo.rs  google.rs  html.rs  main.rs  painting.rs  pdf.rs  style.rs
new_navo/Tauri_Navo/: .gitignore  List.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
new_navo/Tauri_Navo/src/: Account.vue  App.vue  List.vue  main.js
new_navo/Tauri_Navo/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
new_navo/Tauri_Navo/src-tauri/src/: main.rs
new_navo/Tauri_Navo/src/components/: TopBar.vue
new_navo/Tauri_Navo/src/components/settings/: GeneralSettings.vue  HomeSettings.vue  PrivacySecurity.vue  SearchSettings.vue  Settings.vue  SyncSettings.vue
new_navo/navo/: README.md  package.json
new_navo/navo-e/: .gitignore  package-lock.json  package.json
new_navo/navo-e/src/: App.vue
new_navo/navo-e/src-tauri/: tauri.conf.json
new_navo/navo-e/src/components/: ListView.vue  ProfileLogin.vue  TopBar.vue
new_navo/navo-e/src/components/settings/: PrivacySecurity.vue  SettingsBrowser.vue
new_navo/navo-e/src/views/: ListPage.vue  SettingsView.vue
new_navo/navo/public/: index.html
new_navo/navo/src/: App.vue
new_navo/navo/src/components/: BlogPage.vue  HomeBrowser.vue  ListView.vue  ProfileLogin.vue  SettingsBrowser.vue  TopBar.vue
new_navo/navo/src/components/settings/: GeneralSettings.vue  HomeSettings.vue  PrivacySecurity.vue  SearchSettings.vue  SettingsBrowser.vue  SyncSettings.vue
new_navo/navo/src/router/: index.js
new_navo/navo/src/views/: HomeView.vue  ListPage.vue  SettingsView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dom.rs  layout.rs  lib.rs  server.rs  yahoo.rs
