[package]
name = "navo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getopts = "0.2.21"
image = "0.14"
accountable-refcell = "0.2.0"
app_units = "0.7"
arrayvec = "0.7"
async-tungstenite = { version = "0.23", features = ["tokio-rustls-webpki-roots"] }
atomic_refcell = "0.1.13"
backtrace = "0.3"
base64 = "0.21.7"
bitflags = "2.4"
byteorder = "1.5"
cfg-if = "1.0.0"
content-security-policy = { version = "0.5", features = ["serde"] }
cookie = "0.12"
crossbeam-channel = "0.5"
cssparser = "0.31.2"
darling = { version = "0.20", default-features = false }
data-url = "0.1.0"
encoding_rs = "0.8"
env_logger = "0.10"
euclid = "0.22"
glib = "0.18"
gstreamer = { version = "0.21", features = ["v1_18"] }
gstreamer-base = "0.21"
gstreamer-gl = "0.21"
gstreamer-gl-sys = { version = "0.21" }
gstreamer-gl-wayland = { version = "0.21" }
gstreamer-sys = "0.21"
gstreamer-video = "0.21"
headers = "0.3"
html5ever = "0.26"
http = "0.2"
hyper = "0.14"
hyper-rustls = { version = "0.24", default-features = false, features = ["acceptor", "http1", "http2", "logging", "tls12", "webpki-tokio"] }
hyper_serde = { path = "components/hyper_serde" }
image = "0.24"
imsz = "0.2"
indexmap = { version = "2.2.3", features = ["std"] }
ipc-channel = "0.18"
itertools = "0.12"
jemallocator = "0.5.4"
jemalloc-sys = "0.5.4"
keyboard-types = "0.6"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
malloc_size_of_derive = "0.1"
mime = "0.3.13"
mime_guess = "2.0.3"
mozangle = "0.5.1"
num_cpus = "1.1.0"
num-traits = "0.2"
parking_lot = "0.12"
percent-encoding = "2.3"
proc-macro2 = "1"
rand = "0.8"
rand_core = "0.6"
rand_isaac = "0.3"
rayon = "1"
regex = "1.10"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
serde = "1.0.197"
serde_bytes = "0.11"
serde_json = "1.0"
smallbitvec = "2.3.0"
smallvec = "1.13"
sparkle = "0.1.26"
string_cache = "0.8"
string_cache_codegen = "0.5"
syn = { version = "2", default-features = false, features = ["clone-impls", "derive", "parsing"] }
synstructure = "0.13"
thin-vec = "0.2.13"
time = "0.1.41"
tokio = "1"
tokio-rustls = "0.24"
tungstenite = "0.20"
unicode-bidi = "0.3.15"
unicode-script = "0.5"
unicode-segmentation = "1.1.0"
url = "2.5"
uuid = { version = "1.7.0", features = ["v4"] }
webdriver = "0.49.0"
webpki = "0.22"
webpki-roots = "0.25"
wgpu-core = "0.18"
wgpu-types = "0.18"
winapi = "0.3"
xi-unicode = "0.1.0"
xml5ever = "0.17"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
debug-assertions = true
# Uncomment to profile on Linux:
# debug = true
# lto = false

[profile.production]
inherits = "release"
debug-assertions = false